[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=1]
[ext_resource path="res://Scenes/Menus/Main Menu/ui_generic_button.gd" type="Script" id=2]
[ext_resource path="res://mods/Nilenta.Xenon/Menu/XenonMenu/xenon_menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Textures/UI/knot_sep2.png" type="Texture" id=4]

[node name="xenon_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0627451, 0.109804, 0.192157, 0.431373 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
margin_bottom = 50.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.014
anchor_top = 0.025
anchor_right = 1.0
anchor_bottom = 0.0774691
margin_left = 29.872
margin_top = -0.200001
margin_right = 29.8719
margin_bottom = -0.200001
rect_pivot_offset = Vector2( -402, 56.325 )
text = "Xenon Mod Menu"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="sep" type="TextureRect" parent="Panel"]
anchor_top = 0.029321
anchor_right = 1.0
anchor_bottom = 0.0787037
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="close" type="Button" parent="Panel"]
anchor_left = 0.979167
anchor_top = -0.0262346
anchor_right = 1.01417
anchor_bottom = 0.0257654
margin_left = -0.000366211
margin_top = 2.09808e-05
margin_right = -0.323853
margin_bottom = 6.30402
text = "X"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel2" type="Panel" parent="Panel"]
anchor_top = 0.0759312
anchor_right = 1.0
anchor_bottom = 0.948424
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 51.0
margin_right = -16.0
margin_bottom = -16.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel2/ScrollContainer"]
margin_right = 1088.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="categories" type="HBoxContainer" parent="Panel/Panel2"]
anchor_right = 1.0
margin_top = 6.0
margin_bottom = 43.0
custom_constants/separation = 16
alignment = 1

[node name="Label2" type="RichTextLabel" parent="Panel"]
anchor_left = 0.014
anchor_top = 0.937249
anchor_right = 0.909833
anchor_bottom = 0.984527
margin_left = 29.872
margin_top = -0.200001
margin_right = 29.8719
margin_bottom = -0.200001
rect_pivot_offset = Vector2( -402, 56.325 )
bbcode_enabled = true
bbcode_text = "[center][color=#55ACEE]Xenon[/color] [color=#F1A7A3]v1.1.6[/color] | [color=#55ACEE]Made[/color] [color=#F1A7A3]by[/color] [color=#55ACEE]nilenta[/color][/center]"
text = "Xenon v1.1.6 | Made by nilenta"
scroll_active = false
deselect_on_focus_loss_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Panel/close" to="." method="_on_close_pressed"]
